# qgis_ros

./: CMakeLists.txt  LICENSE  README.md  SCRATCHPAD.py  package.xml  requirements.txt  setup.py  techstack.md  techstack.yml
docker/: Dockerfile  docker-compose.yml
qgisros/: __init__.py  metadata.txt  qgis_ros_toolbox.py  vector_data_dialog.py
qgisros/core/: __init__.py
qgisros/core/translators/: json_transport.py  occupancy_grid.py  pose_stamped.py
qgisros/scripts/: topic_to_geotiff.py
qgisros/ui/: vector_data_dialog.ui
scripts/: msg_to_geotiff.py  navsatfix_test_pub  start_qgis_ros
src/qgis_ros/: qgis_ros_toolbox.py
src/qgis_ros/core/: bagging.py  crs.py  helpers.py  ros_vector_provider.py  translator_registry.py
src/qgis_ros/core/translators/: OccupancyGrid.py  Odometry.py  PoseStamped.py  String.py  __init__.py  geometry_msgs.py  nav_msgs.py  sensor_msgs.py  translator.py  wireless_msgs.py
src/qgis_ros/styles/: global_state.qml  nogo_map.qml  pose_arrow.qml  pose_heatmap.qml  slam_map.qml
src/qgis_ros/ui/: bagfile_dialog.py  bagfile_dialog.ui  data_loader_widget.py  data_loader_widget.ui  ros_master_dialog.py  ros_master_dialog.ui
src/qgisros/: metadata.txt  qgis_ros_toolbox.py
src/qgisros/core/: helpers.py  ros_vector_provider.py  translator_registry.py
src/qgisros/core/translators/: __init__.py  json_transport.py  occupancy_grid.py  odometry.py  pose_2d.py  pose_stamped.py  translator.py
src/qgisros/ui/: __init__.py  bagfile_dialog.py  bagfile_dialog.ui  data_loader_widget.py  data_loader_widget.ui  data_loader_widget_old.py  loading_modal.py  loading_modal.ui  ros_master_dialog.py  ros_master_dialog.ui  vector_data_dialog.py  vector_data_dialog.ui
