<?xml version="1.0"?>
<package format="2">
  <name>qgis-ros</name>
  <version>0.0.1</version>
  <description>QGIS plugin for accessing real-time and bagged ROS data</description>

  <maintainer email="ablakey@locusrobotics.com">Andrew Blakey</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>catkin_virtualenv</build_depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>

</package>
